# linux-mole

./: .gitattributes  .gitignore  .mailmap  CONTRIBUTING.md  ESTADO-ACTUAL.md  LICENSE  PUBLISHING.md  README.md  RELEASE_NOTES.md  install-linuxmole.sh  lm.py  pyproject.toml  test_tui_terminal.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
linuxmole/: __init__.py  cli.py  config.py  constants.py  helpers.py  interactive.py
linuxmole/commands/: analyze.py  clean.py  config_cmd.py  optimize.py  status.py
tests/: README.md  __init__.py  conftest.py  test_interactive_enhanced.py
