[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxmole"
version = "1.0.0"
description = "Safe maintenance for Linux + Docker."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Andres Lorente", email = "you@example.com"}]
dependencies = ["rich>=13.0.0"]
keywords = ["linux", "docker", "cleanup", "maintenance", "cli"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/4ndymcfly/linux-mole"
Repository = "https://github.com/4ndymcfly/linux-mole"
Issues = "https://github.com/4ndymcfly/linux-mole/issues"

[project.scripts]
lm = "lm:main"

[tool.setuptools]
py-modules = ["lm"]
